--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap": "^3.4.1",
     "element-ui": "^2.13.0",
     "less": "^3.10.3",
